# learn_algorithm

./: README.md
About.md/: Tex.md
Algorithm/BIT/: Book123.xlsx  PSW02.cpp  bit.cpp  bit1.cpp  bit1.txt  bit2.cpp  bit2.txt  bit3.cpp  compiling_error.txt  intro  sample_input.txt  sw12.txt  sw2.cpp  sw3.cpp  sw4.cpp
Doc/: algo_03  algo_03.md  algo_06  algo_06.md  algo_08  algo_08.md  compile_on_win.md  test.md
Git/: Credential.md  GitIgnore.md  Intro.md
Jenkins/: Jenkins_on_centos.md
Math/: gcd.md  think_tool.md
Professional/: 2-1_DeleteInsert.md  3-1_Relation.md  dp_structure.md  finacchi.md  graph_lca.md  matrix_chain.md  network_flow.md  number1.md
SWCert/: Solution.cpp  Solution.java  Solution1.java  binsearch.cpp  bitset.cpp  count_inversion.cpp  curve.cpp  delete_LIS.cpp  explosive.cpp  fanmeeting.cpp  fence.cpp  func.cpp  game_cover.cpp  graduation.cpp  input.cpp  istreamtest.cpp  m_n.cpp  match_travel.cpp  maxsum.cpp  messenger.cpp  multiply.cpp  password.cpp  picnic.cpp  player.cpp  psum.cpp  quardtree.cpp  result.txt  shade.cpp  sliding_k_median.cpp  sort.cpp  sort2.cpp  stl.cpp  tarjan.cpp  vc.cmd  wildcard.cpp  wormhole.cpp
Tensorflow/: fully_connected_feed.py  mnist.py
algs4.lecture/: week1.md
boost/: CMakeLists.txt  OSX_pf.md  boost.sh
boost/build-script/: CMakeCache.txt  Makefile  cmake_install.cmake  daytime1  daytime2  daytime3  timer1  timer2  timer3  timer4
boost/src/: daytime1.cpp  daytime2.cpp  daytime3.cpp  timer1.cpp  timer2.cpp  timer3.cpp  timer4.cpp
javascript/: function.js  hello_js.html
sources/: .gitignore  hello.cpp
(+102 files in other folders)
